--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,53 +5,100 @@
 
 
     <string-array name="array_bangladesh_division">
-    <item>Select Your State</item>
-    <item>Dhaka</item><item>Chattogram</item><item>Barishal</item><item>Mymensingh</item>
-    <item>Khulna</item><item>Rajshahi</item> <item>Rangpur</item><item>Sylhet</item>
+        <item>Select Your State</item>
+        <item>Dhaka</item>
+        <item>Chattogram</item>
+        <item>Barishal</item>
+        <item>Mymensingh</item>
+        <item>Khulna</item>
+        <item>Rajshahi</item>
+        <item>Rangpur</item>
+        <item>Sylhet</item>
 
 
-</string-array>
+    </string-array>
     <string-array name="array_default_districts">
         <item>Select Your District</item>
     </string-array>
     <string-array name="array_dhaka_districts">
         <item>Select Your District</item>
-        <item>Dhaka</item><item>Faridpur</item><item>Gazipur</item><item>Gopalganj</item><item>Kishoreganj</item><item>Madaripur</item>
-        <item>Manikganj</item><item>Munshiganj</item><item>Narayanganj</item><item>Narsingdi</item><item>Rajbari</item><item>Shariatpur</item><item>Tangail</item>
+        <item>Dhaka</item>
+        <item>Faridpur</item>
+        <item>Gazipur</item>
+        <item>Gopalganj</item>
+        <item>Kishoreganj</item>
+        <item>Madaripur</item>
+        <item>Manikganj</item>
+        <item>Munshiganj</item>
+        <item>Narayanganj</item>
+        <item>Narsingdi</item>
+        <item>Rajbari</item>
+        <item>Shariatpur</item>
+        <item>Tangail</item>
     </string-array>
     <string-array name="array_chattogram_districts">
         <item>Select Your District</item>
-        <item>Bandarban</item><item>Brahmanbaria</item><item>Chandpur</item><item>Chattogram</item><item>Cumilla</item><item>Cox Bazar</item>
-        <item>Feni</item><item>Khagrachari</item><item>Lakshimpur</item><item>Noakhali</item><item>Rangamati</item>
+        <item>Bandarban</item>
+        <item>Brahmanbaria</item>
+        <item>Chandpur</item>
+        <item>Chattogram</item>
+        <item>Cumilla</item>
+        <item>Cox Bazar</item>
+        <item>Feni</item>
+        <item>Khagrachari</item>
+        <item>Lakshimpur</item>
+        <item>Noakhali</item>
+        <item>Rangamati</item>
 
     </string-array>
     <string-array name="array_barishal_districts">
         <item>Select Your District</item>
-        <item>Barguna</item><item>Barishal</item><item>Bhola</item><item>Jhalokathi</item><item>Patuakhali</item><item>Pirojpur</item>
+        <item>Barguna</item>
+        <item>Barishal</item>
+        <item>Bhola</item>
+        <item>Jhalokathi</item>
+        <item>Patuakhali</item>
+        <item>Pirojpur</item>
 
     </string-array>
 
 
     <string-array name="array_mymensingh_districts">
         <item>Select Your District</item>
-        <item>Mymensingh</item><item>Jamalpur</item><item>Sherpur</item><item>Netrokona</item>
+        <item>Mymensingh</item>
+        <item>Jamalpur</item>
+        <item>Sherpur</item>
+        <item>Netrokona</item>
     </string-array>
     <string-array name="array_rajshahi_districts">
         <item>Select Your District</item>
-        <item>Rajshahi</item><item>Bogra</item><item>Jaipurhat</item><item>Naogaon</item>
-        <item>Nawabganj</item><item>Pabna</item><item>Sirajganj</item>
+        <item>Rajshahi</item>
+        <item>Bogra</item>
+        <item>Jaipurhat</item>
+        <item>Naogaon</item>
+        <item>Nawabganj</item>
+        <item>Pabna</item>
+        <item>Sirajganj</item>
     </string-array>
     <string-array name="array_rangpur_districts">
         <item>Select Your District</item>
-        <item>Rangpur</item><item>Nilphamari</item><item>Dinajpur</item><item>Dinajpur</item>
-        <item>Panchagarh</item><item>Gaibandha</item><item>Kurigram</item><item>Lalmonirhat</item><item>Thakurgaon</item>
+        <item>Rangpur</item>
+        <item>Nilphamari</item>
+        <item>Dinajpur</item>
+        <item>Dinajpur</item>
+        <item>Panchagarh</item>
+        <item>Gaibandha</item>
+        <item>Kurigram</item>
+        <item>Lalmonirhat</item>
+        <item>Thakurgaon</item>
     </string-array>
     <string-array name="array_sylhet_districts">
         <item>Select Your District</item>
-        <item>Sylhet</item><item>Habiganj</item><item>Sunamganj</item><item>Maulvibazar</item>
+        <item>Sylhet</item>
+        <item>Habiganj</item>
+        <item>Sunamganj</item>
+        <item>Maulvibazar</item>
     </string-array>
-
-
 
 
 </resources>
